--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "my-app",
   "version": "0.1.0",
-  "homepage": "https://beactivera.github.io/beactivera-react-browsers/",
+  "homepage": "https://beactivera.github.io/react-browsers/",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
